--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+
+# Pillow, Which is a requirement for bokeh, needs version ≥6.2.0.
+pillow = ">=6.2.0"
+
 bokeh = "*"
 pandas = "*"
 flask = "*"
